Upgrade MuseIDE app to Gradle 5.6.2 and Java 12